--- a/Sample.InputKit.Android/Sample.InputKit.Android.csproj
+++ b/Sample.InputKit.Android/Sample.InputKit.Android.csproj
@@ -96,5 +96,9 @@
       <Name>Sample.InputKit</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\LobsterTwo-Bold.ttf" />
+    <AndroidAsset Include="Assets\Lobster-Regular.ttf" />
+  </ItemGroup>
  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
